--- a/app/templates/blob/index.html.twig
+++ b/app/templates/blob/index.html.twig
@@ -46,6 +46,7 @@
                     </form>
 
                     <form method="post" enctype="multipart/form-data" class="field">
+                        <input type="hidden" name="prefix" value="{{ prefix }}">
                         <div class="label">Upload file</div>
                         <div class="row">
                             <input class="file" type="file" name="file" required />
